dockerに必要な設定

--- a/dev.docker-compose.yaml
+++ b/dev.docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - POSTGRES_HOST=postgres
       - REDIS_URL=redis://redis:6379/5
       - DJANGO_SETTINGS_MODULE=attendee.settings.development
+      - POSTGRES_DB=attendee_development
     command: ["/bin/bash", "-c", "/opt/bin/entrypoint.sh && celery -A attendee worker -l INFO"]
 
   attendee-app-local:
@@ -23,6 +24,7 @@ services:
       - POSTGRES_HOST=postgres
       - REDIS_URL=redis://redis:6379/5
       - DJANGO_SETTINGS_MODULE=attendee.settings.development
+      - POSTGRES_DB=attendee_development
     command: python manage.py runserver 0.0.0.0:8000
 
   postgres:
